--- a/style.css
+++ b/style.css
@@ -7,3 +7,68 @@
     --black: #333;
     --white: #fff;
 }
+
+body {
+    background: var(--bg-color);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    height: 100vh;
+    flex-direction: column;
+    margin: 0;
+}
+
+/* nav bar */
+
+.nav {
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+nav a {
+    text-decoration: none;
+    font-size: 19px;
+    padding: 0.5rem;
+    border: transparent dotted 3px;
+    color: var(--white);
+}
+
+nav a:hover {
+    background-color: rgba(150, 49, 49, 0.524);
+    border-radius: 0.5rem;
+}
+
+nav a:active {
+    border-color: rgba(150, 49, 49, 0.524);
+}
+
+form {
+    font-size: 18px;
+    justify-content: center;
+    position: relative;
+}
+
+form input {
+    font-size: inherit;
+    border-radius: 0.3em;
+    background-color: var(--white);
+    border: 1px solid lightgrey;
+    padding-left: 1.5em;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5em;
+    box-shadow: rgba(0, 0, 0, 0.5) 0 0 20px 0px;
+}
+
+.search-icon {
+    font-size: inherit;
+    position: absolute;
+    left: 0.5em;
+    width: 1em;
+    bottom: 0.65em;
+    fill: var(--red);
+}
+
+@media screen and (max-width:450px) {
+    nav {
+        flex-direction: column;
+        margin-bottom: 1rem;
+    }
+}
